[gd_scene load_steps=7 format=2]

[ext_resource path="res://Goose.gd" type="Script" id=1]
[ext_resource path="res://Assets/Goose/Goose1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Goose/Goose2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound/hjonk.ogg" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Goose",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 12 )

[node name="Goose" type="Area2D" groups=["geese"]]
collision_mask = 2
linear_damp = 0.0
script = ExtResource( 1 )

[node name="GooseAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Goose"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.76837e-07 )
shape = SubResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

[node name="DeathBox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
shape = SubResource( 3 )

[node name="hjonk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_Goose_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Goose_body_entered"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
[connection signal="area_entered" from="DeathBox" to="." method="_on_DeathBox_area_entered"]
